--- a/package.json
+++ b/package.json
@@ -8,22 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1",
-    "expo-permissions": "~13.1.0",
-    "expo-barcode-scanner": "~11.2.0",
-    "react-native-screens": "~3.10.1",
+    "expo": "~42.0.1",
+    "expo-status-bar": "~1.0.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4",
+    "react-native-screens": "~3.4.0",
     "@react-navigation/native": "^5.9.4",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "~1.10.2",
     "@react-navigation/bottom-tabs": "^5.11.10",
-    "react-native-safe-area-context": "3.3.2"
+    "react-native-safe-area-context": "3.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.9.0"
   },
   "private": true
 }
